--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "word-list-json": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
